Fix comment card spacing

--- a/static/style.css
+++ b/static/style.css
@@ -150,16 +150,11 @@ nav a:visited,
 .comment {
   border: 1px solid var(--main-border-color);
   padding: 8px;
-  margin-bottom: 8px;
   background-color: var(--main-bg-color);
   display: flex;
   flex-direction: row;
   gap: 8px;
   align-items: flex-start;
-}
-
-.comment:last-of-type {
-  margin-bottom: 0;
 }
 
 .comment-thumbnail {
@@ -188,6 +183,11 @@ nav a:visited,
   color: inherit;
   display: block;
   cursor: pointer;
+  margin-bottom: 8px;
+}
+
+.comment-card-link:last-of-type {
+  margin-bottom: 0;
 }
 
 .comment-card-link:hover .comment {
